--- a/html/views/menu.html
+++ b/html/views/menu.html
@@ -234,6 +234,8 @@
         </ul> <!-- / .navigation -->
         <div class="menu-content">
             <a href="pages-invoice.html" class="btn btn-primary btn-block btn-outline dark">Create Invoice</a>
+            <a href="javascript:void(0);" class="btn btn-primary btn-block btn-outline dark">{{@ccc}}</a>
+            <a href="javascript:void(0);" class="btn btn-primary btn-block btn-outline dark">{{new Date | date('yyyy-MM-dd HH:mm:ss')}}</a>
         </div>
     </div> <!-- / #main-menu-inner -->
 </div> <!-- / #main-menu -->
