--- a/html/views/menu2.html
+++ b/html/views/menu2.html
@@ -64,7 +64,11 @@
                         {{if v.isParent}}
                         <ul>
                             {{each v.children v2 i2}}
+                                {{if v2.isParent}}
+                                <li class="mm-dropdown">
+                                {{else}}
                                 <li>
+                                {{/if}}
                                     <a tabindex="-1" href="{{v2.url}}">
                                         {{if v2.icon == ''}}
                                         <i class="menu-icon fa"></i>
@@ -73,6 +77,23 @@
                                         {{/if}}
                                         <span class="mm-text">{{v2.name}}</span>
                                     </a>
+                                    {{if v2.isParent}}
+                                    <ul>
+                                        {{each v2.children v3 i3}}
+                                        <li>
+                                            <a tabindex="-1" href="{{v3.url}}">
+                                                {{if v3.icon == ''}}
+                                                <i class="menu-icon fa"></i>
+                                                {{else}}
+                                                <i class="{{'menu-icon fa ' + v3.icon}}"></i>
+                                                {{/if}}
+                                                <span class="mm-text">{{v3.name}}</span>
+                                            </a>
+
+                                        </li>
+                                        {{/each}}
+                                    </ul>
+                                    {{/if}}
                                 </li>
                             {{/each}}
                         </ul>
